fix vertical alignment of icons in xonomy bubble menus

--- a/website/widgets/ske.css
+++ b/website/widgets/ske.css
@@ -3,8 +3,6 @@
 .xonomy .readonly .lexonomySkeCaption {display: none;}
 .xonomy .lexonomySkeCaption:hover {color: #004f9b; }
 #xonomyBubble .menuItem > a {display: block; color: inherit; text-decoration: inherit;}
-#xonomyBubble.nerd .menuItem > a {margin: -8px -20px -7px -10px; padding: 8px 20px 7px 10px}
-#xonomyBubble.laic .menuItem > a {margin: -10px -20px -10px -10px; padding: 10px 20px 10px 10px}
 
 div.skebox {padding: 0px; width: 600px; height: 300px; position: relative;}
 div.skebox form.topbar {position: absolute; top: 0px; left: 0px; right: 0px; height: 28px; padding: 5px; background-color: rgb(238, 238, 238); }
